kustomize/ingress/ingress.yaml
# When K8S is upgraded to >= 1.14 - change the apiVersion to:
#apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # CORS is now set in the AM and IDM configurations
    nginx.ingress.kubernetes.io/enable-cors: "false"
    certmanager.k8s.io/cluster-issuer: "default-issuer"
    #certmanager.k8s.io/cluster-issuer: "ca-issuer"
  name: forgerock
spec:
  rules:
  - host: $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    http:
      paths:
      - backend:
          serviceName: am
          servicePort: 80
        path: /am
      - backend:
          serviceName: idm
          servicePort: 80
        path: /openidm
      - backend:
          serviceName: idm
          servicePort: 80
        path: /admin
      - backend:
          serviceName: forgeops-tests
          servicePort: 80
        path: /tests
      # end user UI currently has its own ingress. Needs to rewrite the url path...
      # - backend:
      #     serviceName: end-user-ui
      #     servicePort: 80
      #   path: /enduser-ui
      - backend:
          serviceName: ig
          servicePort: 80
        path: /ig
  tls:
  - hosts:
    - $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    secretName: sslcert
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: "default-issuer"
    #certmanager.k8s.io/cluster-issuer: "ca-issuer"
  name: end-user-ui
spec:
  rules:
  - host: $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    http:
      paths:
      - backend:
          serviceName: end-user-ui
          servicePort: 80
        path: /enduser/?(.*)
  tls:
  - hosts:
    - $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    secretName: sslcert
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    certmanager.k8s.io/cluster-issuer: "default-issuer"
spec:
  tls:
  - hosts:
    - $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    secretName: sslcert
  rules:
  - host: $(NAMESPACE).$(SUBDOMAIN).$(DOMAIN)
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /web
